<resources>
    <plurals name="events_in_list">
        <item quantity="one">%1$d Event:</item>
        <item quantity="other">%1$d Events:</item>
    </plurals>
    <plurals name="asset_added">
        <item quantity="one">%1$s stock for %2$s was added to the portfolio.</item>
        <item quantity="other">%1$s stocks for %2$s were added to the portfolio.</item>
    </plurals>
    <plurals name="asset_updated">
        <item quantity="one">%1$s stock for %2$s was updated in the portfolio.</item>
        <item quantity="other">%1$s stocks for %2$s were updated in the portfolio.</item>
    </plurals>
    <plurals name="asset_removed">
        <item quantity="one">%1$s stock was deleted in the portfolio.</item>
        <item quantity="other">%1$s stocks were deleted in the portfolio.</item>
    </plurals>
    <plurals name="asset_removed_updated">
        <item quantity="one">Portfolio was updated with %1$s deleted stock.</item>
        <item quantity="other">Portfolio was updated with %1$s deleted stocks.</item>
    </plurals>
    <plurals name="delete_asset_msg">
        <item quantity="one">%1$s stock for %2$s was deleted from the portfolio.</item>
        <item quantity="other">%1$s stocks for %2$s were deleted from the portfolio.</item>
    </plurals>
    <plurals name="delete_removed_asset_msg">
        <item quantity="one">%1$s stock for %2$s was deleted from the portfolio.</item>
        <item quantity="other">%1$s stocks for %2$s were deleted from the portfolio.</item>
    </plurals>
    <plurals name="delete_asset_confirm">
        <item quantity="one">Are you sure you want to delete the %1$s share at the purchase price of %2$s from your portfolio?</item>
        <item quantity="other">Are you sure you want to delete the %1$s shares at the purchase price of %2$s from your portfolio?</item>
    </plurals>
    <plurals name="delete_removed_asset_confirm">
        <item quantity="one">Are you sure you want to delete the %1$s share at the purchase price of %2$s from your portfolio?</item>
        <item quantity="other">Are you sure you want to delete the %1$s shares at the purchase price of %2$s from your portfolio?</item>
    </plurals>
 <string name="app_name" translatable="false">Stock Room</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calc">AI</string>
    <string name="general_header">General</string>
    <string name="display_header">Display</string>
    <string name="feedback_header">Feedback</string>
    <string name="menu_sync">Update</string>
    <string name="menu_sort">Sort</string>
    <string name="hint_add_stock">Stock symbol</string>
    <string name="button_add">Add</string>
    <string name="bought">Buy</string>
    <string name="sold">Sell</string>
    <string name="sort_change_percentage">Sort by Change \u0025</string>
    <string name="sort_name">Sort by Name</string>
    <string name="sort_purchaseprice">Sort by Purchaseprice</string>
    <string name="sort_assets">Sort by Assets</string>
    <string name="sort_profit">Sort by Gain</string>
    <string name="sort_profit_percentage">Sort by Gain \u0025</string>
    <string name="sort_marketcap">Sort by Market Capitalization</string>
    <string name="sort_dividend_percentage">Sort by Dividend \u0025</string>
    <string name="sort_group">Sort by Group</string>
    <string name="sort_marker">Sort by Marker</string>
    <string name="sort_activity">Sort by Activity Date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="one_day_range">Daily</string>
    <string name="five_days_range">Weekly</string>
    <string name="one_month_range">Monthly</string>
    <string name="three_month_range">Quarterly</string>
    <string name="ytd_range">Year to date</string>
    <string name="one_year_range">One Year</string>
    <string name="five_year_range">Five years</string>
    <string name="max_range">Max</string>
    <string name="use_postmarket">After hour trading</string>
    <string name="use_postmarket_desc">Display market values from after hour trading. The values are displayed in italics and in darker red and green color.</string>
    <string name="note">Note</string>
    <string name="alerts">Alerts</string>
    <string name="alert_above">Stock price above</string>
    <string name="alert_below">Stock price below</string>
    <string name="alert_note">Note</string>
    <string name="note_in_list">Note:</string>
    <string name="alert_above_in_list">Alert if over</string>
    <string name="alert_below_in_list">Alert if under</string>
    <string name="alert_above_error">Alert Below must be less than Alert Above.</string>
    <string name="alert_below_error">Alert Above must be more than Alert Below.</string>
    <string name="alert_above_notification_title">%1$s is now above %2$s at %3$s</string>
    <string name="alert_below_notification_title">%1$s is now below %2$s at %3$s</string>
    <string name="alert_above_notification">The Stock %1$s, %2$s, is now above %3$s at %4$s.</string>
    <string name="alert_below_notification">The Stock %1$s, %2$s, is now below %3$s at %4$s.</string>
    <string name="enable_notifications">Enable Alerts</string>
    <string name="enable_notifications_desc">Display Alerts if enabled.</string>
    <string name="add">Add</string>
    <string name="update_note">Update note</string>
    <string name="invalid_number">Invalid number</string>
    <string name="number_of_stock">Number of shares</string>
    <string name="price">Price</string>
    <string name="assetlistprice">Price</string>
    <string name="assetlistquantity">Quantity</string>
    <string name="assetlisttotal">Value</string>
    <string name="assetlistchange">Asset change</string>
    <string name="assetlistvalue">Asset value</string>
    <string name="assetlistfee">Fee</string>
    <string name="assetlistdate">Date</string>
    <string name="assetlistnote">Note</string>
    <string name="no_total_quantity">Buy some shares first.</string>
    <string name="dividend_in_list">Dividend:</string>
    <string name="standard_group">Not assigned</string>
    <string name="import_section_header">Import</string>
    <string name="button_import">Import</string>
    <string name="import_list_desc">Import stock list from a .txt, .csv or .json file.</string>
    <string name="import_error">The selected file could not be imported.\n%1$s</string>
    <string name="import_mimetype_error">The mime type \'%1$s\' is not supported.</string>
    <string name="import_csv_column_error">The selected file could not be imported. The column \'%1$s\' is missing.</string>
    <string name="import_msg">%1$s stocks imported.</string>
    <string name="export_msg">Your portfolio with %1$d stocks was exported to a .json file.</string>
    <string name="export_list">Export portfolio</string>
    <string name="export_list_desc">Export portfolio to a .json file.</string>
    <string name="export_error">An error occurred while exporting the data:\n%1$s</string>
    <string name="import_select_file">Select a file</string>
    <string name="delete_stock">Are you sure to delete the stock \'%1$s\' ?</string>
    <string name="delete">Delete</string>
    <string name="delete_all_title">Delete all</string>
    <string name="delete_all_confirm">Are you sure?</string>
    <string name="delete_all_desc">Delete all stocks.</string>
    <string name="quantity_not_zero">The number of shares must not be 0 or negative.</string>
    <string name="removed_quantity_exceed_existing">You remove more stocks than you own. The amount will be adjusted from %1$s to %2$s.</string>
    <string name="price_not_negative">The price of the stock must not be negative.</string>
    <string name="fee_not_negative">The fee must not be negative.</string>
    <string name="bought_asset">Bought asset</string>
   <string name="move_asset">Move asset to another account</string>
    <string name="current_assets">Assets</string>
    <string name="current_portfolio_graph">Current portfolio, top 10 stocks</string>
    <string name="update_asset">Update asset</string>
    <string name="sold_asset">Sold asset</string>
    <string name="delete_all_assets">Delete all assets</string>
    <string name="delete_all_assets_msg">All assets are deleted from the portfolio.</string>
    <string name="delete_all_assets_confirm">Are you sure to delete all assets of \'%1$s\' from your portfolio?</string>
    <string name="split">Split</string>
    <string name="split_asset">Apply stock split</string>
    <string name="split_asset_help">For example Stock split ratio 1:2, for each share you get 2 shares for half the price.</string>
    <string name="split_ratio">Stock split ratio, 1:n</string>
    <string name="invalid_split_entry">The stock split ratio must be greater than 0 and less or equal than 20.</string>
    <string name="split_min_price">Stock split ratio would result in a too small price.</string>
    <string name="split_min_quantity">Stock split ratio would result in a too small amount of shares.</string>
    <string name="asset_share_not_empty">Enter a number of stocks.</string>
    <string name="asset_price_not_empty">Enter a price for the stock.</string>
    <string name="asset_summary_text">Total assets:</string>
    <string name="asset_summary_account_text">Total assets for Account \'%1$s\':</string>
    <string name="fee">Fee</string>
    <string name="asset_fee_not_valid">Enter a fee for the stock.</string>
    <string name="title_activity_add">Add stocks</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_stockdata">Stock details</string>
    <string name="add_stock">Added stock \'%1$s\'.</string>
    <string name="current_events">Events</string>
    <string name="event_title">Event</string>
    <string name="event_note">Details</string>
    <string name="event_datetime">Date</string>
    <string name="add_event">Add event</string>
    <string name="update_event">Update event</string>
    <string name="event_empty">Enter an event.</string>
    <string name="event_updated">The event \'%1$s\' at %2$s was updated.</string>
    <string name="event_added">The event \'%1$s\' at %2$s was added.</string>
    <string name="delete_event">Delete event</string>
    <string name="delete_event_confirm">Are you sure to delete the event \'%1$s\' at %2$s ?</string>
    <string name="delete_event_msg">Event \'%1$s\' at %2$s is deleted.</string>
    <string name="group_name">Group \'%1$s\'</string>
    <string name="note_added">Note \'%1$s\' added.</string>
    <string name="add_group">Add group</string>
    <string name="add_all_groups">Delete all groups</string>
    <string name="group_header">Group</string>
    <string name="add_predef_groups_title">Example groups</string>
    <string name="dividend_header">Reported Dividend</string>
    <string name="dividend_received">Dividend received</string>
    <string name="dividend_announced">Dividend announced</string>
    <string name="add_dividend">Add Dividend</string>
    <string name="set_annual_dividend_label">New annual dividend rate</string>
    <string name="calc_format_header">Display format</string>
    <string name="calc_format_displayed_decimals">Displayed decimals</string>
    <string name="calc_format_displayed_decimals_desc">Sets the number of displayed decimals.</string>
    <string name="calc_format_decimal_separator">Decimal separator</string>
    <string name="calc_format_decimal_separator_desc">Sets the decimal separator. For example 3.14</string>
    <string name="calc_format_display_group_separator">Display group separator</string>
    <string name="calc_format_display_group_separator_desc">Displays the thousands group separator of the number. For example 1,234,567</string>
    <string name="calc_format_radian">Degree/Radian</string>
    <string name="calc_format_radian_desc">Use 2π instead of 360° for trigonometric functions.</string>
</resources>