<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory app:title="@string/calc_format_header">

    <ListPreference
        android:key="calc_format_displayed_decimals"
        android:title="@string/calc_format_displayed_decimals"
        app:summary="@string/calc_format_displayed_decimals_desc"
        android:defaultValue="1"
        android:entryValues="@array/calc_format_displayed_decimals_values"
        android:entries="@array/calc_format_displayed_decimals"
        app:icon="@drawable/ic_action_calc_precision"
        />

    <ListPreference
        android:key="calc_format_decimal_separator"
        android:title="@string/calc_format_decimal_separator"
        app:summary="@string/calc_format_decimal_separator_desc"
        android:defaultValue="0"
        android:entryValues="@array/calc_format_decimal_separator_values"
        android:entries="@array/calc_format_decimal_separator"
        app:icon="@drawable/ic_action_language"
        />

    <SwitchPreferenceCompat
        app:key="calc_format_display_group_separator"
        app:title="@string/calc_format_display_group_separator"
        app:summary="@string/calc_format_display_group_separator_desc"
        app:defaultValue="true"
        app:icon="@drawable/ic_action_calc_separator"
        />

    <SwitchPreferenceCompat
        app:key="calc_format_radian"
        app:title="@string/calc_format_radian"
        app:summary="@string/calc_format_radian_desc"
        app:defaultValue="true"
        app:icon="@drawable/ic_action_calc_pi"
        />

  </PreferenceCategory>

</PreferenceScreen>