<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"
      >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/group_header"
        style="@style/section_header"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        >

      <ImageButton
          android:id="@+id/addGroupButton"
          android:src="@drawable/ic_action_add_circle_outline"
          style="@style/asset_item_imagebutton"
          android:contentDescription="@string/add_group"
          />

      <ImageButton
          android:id="@+id/addPredefinedGroupsButton"
          android:src="@drawable/ic_action_add_samples"
          style="@style/asset_item_imagebutton"
          android:contentDescription="@string/add_predef_groups_title"
          />

      <ImageButton
          android:id="@+id/deleteAllGroupButton"
          android:src="@drawable/ic_action_delete"
          style="@style/asset_item_imagebutton"
          android:contentDescription="@string/add_all_groups"
          />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/groupview_item"
        />

  </LinearLayout>

</androidx.core.widget.NestedScrollView>

</LinearLayout>
