<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:text="@string/split_asset"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:text="@string/split_asset_help"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_weight="0.4"
          android:text="@string/split_ratio"
          />

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/splitRatioZ"
          android:layout_weight="0.4"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="end"
          android:inputType="numberDecimal"
          android:digits="0123456789.,"
          android:imeOptions="actionDone"
          android:maxLength="4"
          android:maxLines="1"
          android:textAlignment="textEnd"
          />

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal|center_vertical"
          android:layout_weight="0.2"
          android:text=":"
          />

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/splitRatioN"
          android:layout_weight="0.4"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="end"
          android:inputType="numberDecimal"
          android:digits="0123456789.,"
          android:imeOptions="actionDone"
          android:maxLength="4"
          android:maxLines="1"
          android:textAlignment="textEnd"
          />

    </LinearLayout>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>