<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"
      android:fadeScrollbars="false"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          >

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/textViewChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="end"
            android:textSize="13sp"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <View style="@style/Divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dividend_header"
            style="@style/section_header"
            />

        <TextView
            android:id="@+id/textViewDividendOnlineData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_margin="16dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textViewAddDividendLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
          <TextView
              android:id="@+id/textViewSetAnnualDividendLabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="16dp"
              android:textSize="13sp"
              android:text="@string/set_annual_dividend_label"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              />

          <TextView
              android:id="@+id/textViewSetAnnualDividend"
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:gravity="end"
              android:layout_marginTop="16dp"
              android:layout_marginStart="40dp"
              android:layout_marginBottom="16dp"
              android:layout_marginEnd="16dp"
              app:layout_constraintTop_toBottomOf="@+id/textViewSetAnnualDividendLabel"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              />

          <TextView
              android:id="@+id/textViewSetAnnualDividendPercent"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="13sp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              app:layout_constraintTop_toTopOf="@+id/textViewSetAnnualDividend"
              app:layout_constraintStart_toEndOf="@+id/textViewSetAnnualDividend"
              app:layout_constraintBottom_toBottomOf="@+id/textViewSetAnnualDividend"
              />

          <View
              android:layout_width="0dp"
              android:layout_height="1dp"
              android:layout_marginTop="2dp"
              android:background="@color/colorPrimary"
              app:layout_constraintTop_toBottomOf="@id/textViewSetAnnualDividend"
              app:layout_constraintStart_toStartOf="@+id/textViewSetAnnualDividend"
              app:layout_constraintEnd_toEndOf="@+id/textViewSetAnnualDividend"
              />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textViewDividendPayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="0dp"
            />

      </LinearLayout>

      <View style="@style/Divider"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dividend_received"
          style="@style/section_header"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:gravity="end"
          >

        <ImageButton
            android:id="@+id/addDividendReceivedButton"
            android:src="@drawable/ic_action_add_circle_outline"
            style="@style/asset_item_imagebutton"
            android:contentDescription="@string/add_dividend"
            />

      </LinearLayout>

      <HorizontalScrollView
          android:fillViewport="true"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:fadeScrollbars="false"
          >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dividendsReceivedView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
      </HorizontalScrollView>

      <View style="@style/Divider"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dividend_announced"
          style="@style/section_header"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:gravity="end"
          >

        <ImageButton
            android:id="@+id/addDividendAnnouncedButton"
            android:src="@drawable/ic_action_add_circle_outline"
            style="@style/asset_item_imagebutton"
            android:contentDescription="@string/add_dividend"
            />

      </LinearLayout>

      <HorizontalScrollView
          android:fillViewport="true"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:fadeScrollbars="false"
          >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dividendsAnnouncedView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
      </HorizontalScrollView>

      <View style="@style/Divider"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="@string/note"
          style="@style/section_header"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:gravity="end"
          >
        <ImageButton
            android:id="@+id/updateDividendNoteButton"
            android:src="@drawable/ic_action_note_add"
            style="@style/asset_item_imagebutton"
            android:tooltipText="@string/update_note"
            android:contentDescription="@string/update_note"
            />
      </LinearLayout>

      <TextView
          android:id="@+id/dividendNoteTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:padding="4dp"
          android:background="@drawable/note_bg"
          />

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</LinearLayout>
